--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,28 @@ body {
   scroll-behavior: smooth;
 }
 
+:target {
+  padding-top: 150px;
+  margin-top: -150px;
+}
+.top {
+  opacity: 0;
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  font-size: 20px;
+  border-radius: 50%;
+  background-color: #383838;
+  color: white;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999;
+  text-align: center;
+  line-height: 50px;
+  transition: 0.2s;
+  cursor: pointer;
+}
+
 #header {
   height: 150px;
   background-color: white;
@@ -20,6 +42,13 @@ body {
   top: 0;
   left: 0;
   z-index: 999;
+  transition: 0.3s;
+}
+#header .down-menu {
+  display: none;
+}
+#header.shadow {
+  box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.363);
 }
 #header .header-menu {
   display: flex;
@@ -48,6 +77,9 @@ body {
 #header .header-menu > li:nth-child(5) {
   order: 5;
 }
+#header .header-menu > li:nth-child(6) {
+  order: 6;
+}
 
 #header .header-menu a {
   width: 100%;
@@ -74,6 +106,7 @@ body {
 }
 #header .header-menu img {
   max-width: 100%;
+  vertical-align: middle;
 }
 
 #footer {
@@ -209,7 +242,7 @@ input[type="text"] {
   background-color: rgb(168, 118, 52);
   color: white;
   margin-top: 15px;
-  font-size: 0.9rem;
+  font-size: 1.1rem;
   transition: 0.3s ease-in-out;
 }
 .main-one-content > a:hover,
@@ -245,16 +278,19 @@ input[type="text"] {
   width: 100%;
   vertical-align: middle;
 }
+.product_mb {
+  margin-bottom: 30px;
+}
 .main-two .paper {
   position: absolute;
   bottom: -20px;
   left: 0;
   right: 0;
   margin: auto;
-  padding: 10px 15px;
+  padding: 10px 5px;
   background-color: rgb(250, 243, 221);
   text-align: center;
-  width: 100px;
+  width: 80px;
   word-break: break-all;
   letter-spacing: 2px;
   font-weight: 600;
@@ -312,7 +348,7 @@ input[type="text"] {
   content: "";
   position: absolute;
   top: 0;
-  left: 120px;
+  left: 175px;
   right: 0;
   background: white;
   height: 3px;
@@ -326,7 +362,8 @@ input[type="text"] {
   top: -25px;
   left: 25px;
   z-index: 4;
-  padding: 0 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .main-three-title .title-content {
   max-width: 100%;
@@ -345,12 +382,12 @@ input[type="text"] {
 
 .main-four {
   display: flex;
+  margin-top: 50px;
   flex-direction: column;
   align-items: center;
   background: linear-gradient(rgb(255, 255, 255) 50%, rgb(250, 243, 221) 50%);
 }
 .main-four h1 {
-  margin-top: 50px;
   text-align: center;
   color: #383838;
 }
@@ -400,7 +437,7 @@ input[type="text"] {
   transition: max-height 0.1s ease-out;
 }
 .slide {
-  max-height: 300px;
+  max-height: 400px;
   overflow: hidden;
   transition: max-height 0.2s ease-in;
 }
@@ -409,6 +446,20 @@ input[type="text"] {
 }
 
 @media screen and (max-width: 1189px) {
+  .main-one {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+  .main-one-img {
+    margin-left: 10px;
+  }
+  .main-one-img .img {
+    position: unset;
+  }
+  .main-two {
+    margin-top: 100px;
+  }
+
   .main-three {
     display: flex;
     flex-direction: column;
@@ -451,6 +502,7 @@ input[type="text"] {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 100px;
   }
 
   #header .header-menu {
@@ -459,6 +511,15 @@ input[type="text"] {
   #header .header-menu > li + li {
     display: none;
   }
+  #header .header-menu li,
+  img {
+    height: 100%;
+  }
+  #header .header-menu a {
+    display: inline-block;
+    height: 100%;
+  }
+
   #header .burger-menu {
     display: block;
     width: 30px;
@@ -493,6 +554,28 @@ input[type="text"] {
     background-color: #383838;
     transition: 0.2s;
   }
+  .main-one {
+    align-items: center;
+    flex-direction: column-reverse;
+  }
+  .main-one-img {
+    width: 100%;
+    margin-left: unset;
+  }
+
+  .main-one-content {
+    width: 150px;
+    margin-top: 25px;
+  }
+
+  .main-one-title {
+    width: unset;
+    font-size: 0.9rem;
+  }
+  .main-one-title > h1 {
+    top: -22px;
+    left: 22px;
+  }
   #burgershow:checked ~ .burger-menu .burger::after {
     transform: rotate(45deg);
     transform-origin: 0% 0%;
@@ -506,11 +589,12 @@ input[type="text"] {
   }
 
   #header .down-menu {
+    display: block;
     width: 100%;
     position: absolute;
     padding: 0 80px;
     background-color: white;
-    top: 150px;
+    top: 100px;
     left: 0;
     z-index: 3;
     border-bottom: 1px solid black;
@@ -531,7 +615,9 @@ input[type="text"] {
   #header .down-menu > li a:hover {
     color: #6d6c6c;
   }
-
+  .main {
+    margin-top: 100px;
+  }
   .main-three {
     padding: 0 15px;
   }
@@ -635,6 +721,9 @@ input[type="text"] {
   }
   .pcnone {
     display: block;
+  }
+  .product_mb {
+    margin-bottom: 30px;
   }
 }
 
