--- a/css/index.css
+++ b/css/index.css
@@ -559,7 +559,7 @@ input[type="text"] {
     flex-direction: column-reverse;
   }
   .main-one-img {
-    width: 100%;
+    max-width: 100%;
     margin-left: unset;
   }
 
